fixed initial scroll updates bug, styled categories scrollbar

--- a/index.css
+++ b/index.css
@@ -226,13 +226,30 @@ main {
 
 .categories-container {
     display: flex;
-    overflow-x: auto;
+    overflow-x: scroll;
     scroll-behavior: smooth;
-    scrollbar-width: thin;
-    scrollbar-color: grey;
     gap: 10px;
     padding: 2rem;
     z-index: 1;
+}
+
+.categories-container::-webkit-scrollbar {
+    background-color: transparent;
+    height: 12px;
+}
+
+.categories-container::-webkit-scrollbar-thumb {
+    background: rgb(223, 222, 222);
+    border-radius: 10px;
+}
+
+.categories-container::-webkit-scrollbar-thumb:hover {
+    background: #eee;
+}
+
+.categories-container::-webkit-scrollbar-track {
+    background: rgb(0, 10, 69);
+    border-radius: 10px;
 }
 
 .category-item {
@@ -254,6 +271,14 @@ main {
     letter-spacing: 1px;
     transform: scale(0.8);
     transition: all 0.2s ease-in-out;
+}
+
+@media (max-width: 768px) {
+    .category-item {
+        font-size: 1rem;
+        height: 150px;
+        width: 150px;
+    }
 }
 
 .category-item.active {
